--- a/app/views/mosaics/new.html.erb
+++ b/app/views/mosaics/new.html.erb
@@ -1,3 +1,3 @@
 <%= link_to 'Upload Composition Pictures', upload_path, class: 'btn btn-info' %>
-<%= link_to 'Upload Base Picture', ???, class: 'btn btn-primary' %>
+<%= link_to 'Upload Base Picture', upload_path, class: 'btn btn-primary' %>
 <%= link_to 'Sign Out', current_user, method: :delete, class: 'btn btn-danger' %>
