--- a/app/views/modals/base/_upload.html.erb
+++ b/app/views/modals/base/_upload.html.erb
@@ -1,8 +1,8 @@
-<div class="modal fade" id="base_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="upload_base_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       
-      <%= form_for @mosaic, :html => {  multipart: true } do |f| %>
+      <%= simple_form_for @mosaic, url: url_for(controller: :mosaics, action: :upload_base) do |f|  %>
 
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -10,12 +10,12 @@
         </div>
         
         <div class="modal-body">
-          <%= file_field_tag "base", type: :file  %>
+          <%= f.file_field :base, type: :file  %>
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-          <%= f.submit 'Upload', class: 'btn btn-primary' %>
+          <%= f.button :submit, 'Upload', class: 'btn btn-primary' %>
         </div>
 
       <% end %>
