--- a/app/views/modals/composition/_upload.html.erb
+++ b/app/views/modals/composition/_upload.html.erb
@@ -1,8 +1,8 @@
-<div class="modal fade" id="composition_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="upload_composition_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       
-      <%= form_for @mosaic, :html => {  multipart: true } do |f| %>
+      <%= simple_form_for @mosaic, url: url_for(controller: :mosaics, action: :upload_comp) do |f| %>
 
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -15,12 +15,12 @@
                for paperclip!!
                file_field_tag, since images is not a gallery attribute
           -->
-          <%= file_field_tag "compositions[]", type: :file, multiple: true %>
+          <%= f.file_field :compositions, type: :file, multiple: true %>
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-          <%= f.submit 'Upload', class: 'btn btn-primary' %>
+          <%= f.button :submit, 'Upload', class: 'btn btn-primary' %>
         </div>
 
       <% end %>
