Revamp view structure again to reduce to 2 buttons

--- a/app/views/mosaics/new.html.erb
+++ b/app/views/mosaics/new.html.erb
@@ -1,18 +1,17 @@
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#composition_modal">
-  Choose Composition Pictures
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#upload_modal">
+  Upload Pictures
 </button>
 
 </br>
 </br>
 
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#base_modal">
-  Choose Base Pictures
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#choose_composition_modal">
+  Select Pictures
 </button>
 
 
-<!-- Composition Images Modal -->
-<%= render 'modals/composition' %>
-
-<!-- Base Image modal -->
-<%= render 'modals/base' %>
+<!-- Upload Images Modal -->
+<%= render 'modals/upload' %>
+<!-- Choose Images Modal -->
+<%= render 'modals/select' %>
