--- a/app/views/modals/_select.html.erb
+++ b/app/views/modals/_select.html.erb
@@ -7,20 +7,19 @@
 
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4> <%= f.label :composition_pictures, class: 'modal-title', id: 'myModalLabel' %> </h4>
+          <h4 class: 'modal-title', id: 'myModalLabel'> Select Pictures </h4>
         </div>
 
         <div class="modal-body">
           
-          <%= f.association :composition_pictures %>
-
-          <%= f.association :base_pictures %>
+          <%= f.association :composition_pictures, collection: @user.composition_pictures %>
+          <%= f.association :base_pictures, collection: @user.base_pictures %>
 
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-          <%= f.submit 'Create Mosaic', class: 'btn btn-primary' %>
+          <%= f.button :submit, 'Create Mosaic', class: 'btn btn-primary' %>
         </div>
 
       <% end %>
