--- a/app/views/modals/_upload.html.erb
+++ b/app/views/modals/_upload.html.erb
@@ -1,5 +1,6 @@
 <div class="modal fade" id="upload_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
+
     <div class="modal-content">
       
       <%= simple_form_for @user, url: upload_path, method: 'post' do |f|  %>
@@ -10,16 +11,11 @@
         </div>
         
         <div class="modal-body">
-          <!-- Use HTML5 multiple attribute to enable multiple selection
-               and pass back to controller all files as an array, ready 
-               for paperclip!!
-               file_field_tag, since images is not a gallery attribute
-          -->
           <%= f.label :composition_pictures %>
           <%= f.file_field :compositions, multiple: true %>
 
           <%= f.label :base_pictures %>
-          <%= f.file_field :base %>
+          <%= f.file_field :bases, multiple: true %>
         </div>
 
         <div class="modal-footer">
