--- a/app/views/mosaics/new.html.erb
+++ b/app/views/mosaics/new.html.erb
@@ -9,6 +9,7 @@
 
 </br>
 </br>
+    <%= link_to 'Profile', user_path(id: current_user.id), class: 'btn btn-info btn-sm h-right' %>
 
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#select_modal">
   Select Pictures
