--- a/app/views/modals/_upload.html.erb
+++ b/app/views/modals/_upload.html.erb
@@ -11,11 +11,11 @@
         </div>
         
         <div class="modal-body">
-          <%= f.label :composition_pictures %>
-          <%= f.file_field :compositions, multiple: true %>
+          <%= f.label :composition_pictures, class: 'form-label' %>
+          <%= f.file_field :compositions, multiple: true, class: 'form-control' %>
 
-          <%= f.label :base_pictures %>
-          <%= f.file_field :bases, multiple: true %>
+          <%= f.label :base_pictures, class: 'form-label' %>
+          <%= f.file_field :bases, multiple: true, class: 'form-control last-form-input' %>
         </div>
 
         <div class="modal-footer">
