--- a/app/views/modals/_change_password.html.erb
+++ b/app/views/modals/_change_password.html.erb
@@ -3,18 +3,18 @@
   
     <div class="modal-content">
       
-      <%= simple_form_for @user, url: change_password_path, method: 'post' do |f| %>
+      <%= simple_form_for @user, url: change_password_path, method: 'post', html: { class: 'form-signin' } do |f| %>
 
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class: 'modal-title', id: 'myModalLabel'> Change Password </h4>
+          <h4 class: 'modal-title form-heading', id: 'myModalLabel'> Change Password </h4>
         </div>
 
         <div class="modal-body">
 
           <%= f.input_field :password, placeholder: 'Password', class: 'form-control' %>
           <%= f.input_field :password_confirmation, placeholder: 'Confirmation', class: 'form-control' %>
-          <%= f.input_field :new_password, placeholder: 'New Password', class: 'from-control last-form-input' %>
+          <%= f.input_field :new_password, placeholder: 'New Password', class: 'form-control last-form-control' %>
           
         </div>
 
