--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <h2 class='form-signin-heading'>Create an account</h2>
   <%= f.input_field :email, placeholder: 'Email Address', class: 'form-control' %>
   <%= f.input_field :password, placeholder: 'Password', class: 'form-control' %>
-  <%= f.input_field :password_confirmation, placeholder: 'Confirmation', class: 'form-control last-form-input' %>
+  <%= f.input_field :password_confirmation, placeholder: 'Confirmation', class: 'form-control last-form-control' %>
   <%= f.button :submit, class: 'btn btn-large btn-primary btn-block' %>
   </br>
   <%= link_to 'Already a member?', login_user_path %>
