Add javascript to enable image picker dialogs for selecting and deleting picture  * The removal of loading the js tree in application.js allows for page-specific (more like controller specific) javascript     * Also needed to added asset compilation now that javascript files are outside asset pipeline     * Also need to include javascript for each page, done in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>Mosaics</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <%= csrf_meta_tags %>
 
 </head>
@@ -24,8 +26,8 @@
     </div>
   </div>
 
+  <!-- Add to load #{controller_name}.js for each controller and only that controller -->
+  <%= javascript_include_tag params[:controller] %>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </body>
 </html>
