Make delete modal start with no pictures selected

--- a/app/views/modals/_delete.html.erb
+++ b/app/views/modals/_delete.html.erb
@@ -33,9 +33,9 @@
           <div id='hidden_div'>
             <!-- Create lists of check boxes and radio buttons representing composition and base pictures respectively. These are controlled by clicks on images. 
                - Check box/radio button IDs: user_[composition/base]_picture_ids_[id] -->
-            <%= f.association :composition_pictures, collection: @user.composition_pictures,include_hidden: false, include_blank: false, class: 'image-checkbox', as: :check_boxes %>
-            <%= f.association :base_pictures, collection: @user.base_pictures, include_hidden: false, include_blank: false, class: 'image-checkbox', as: :check_boxes %>
-            <%= f.association :mosaics, collection: @user.mosaics, include_hidden: false, include_blank: false, class: 'image-checkbox', as: :check_boxes %>
+            <%= f.association :composition_pictures, collection: @user.composition_pictures, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
+            <%= f.association :base_pictures, collection: @user.base_pictures, include_hidden: false, include_blank: false, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
+            <%= f.association :mosaics, collection: @user.mosaics, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
           </div>
 
         </div>
