Dynamically size the mosaic after it has been created to maintain some of the original aspect ratio

--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -1,7 +1,7 @@
 <h2> Show dis shit </h2>
 
 <!-- TODO: Figure out better sizing scheme. This will just distort -->
-<%= image_tag(@user.mosaics.last.name, size: '560x350',) %>
+<%= image_tag(@user.mosaics.last.name, size: picture_lg(@user.mosaics.last)) %>
 
 </br></br>
 
