--- a/app/views/modals/_select.html.erb
+++ b/app/views/modals/_select.html.erb
@@ -16,12 +16,12 @@
           <!-- Create lists of selectable images mapped to check boxes and radio buttons created below for composition and base pictures respectively. Tied together in Mosaics.js -->
           <h5> Composition Pictures </h5>
           <% @user.composition_pictures.each do |c| %>
-            <%= image_tag "#{base_url}/composition-pictures/#{c.name}", size: '96x60', id: "cimage-#{c.id}", class: 'checked' %>
+            <%= image_tag "#{base_url}/composition-pictures/#{c.name}", size: '96x60', id: "cimg-sel-#{c.id}", class: 'checked' %>
           <% end %>
 
           <h5> Base Pictures </h5>
           <% @user.base_pictures.each do |b| %>
-            <%= image_tag "#{base_url}/base-pictures/#{b.name}", size: '96x60', id: "bimage-#{b.id}", class: 'image-list' %>
+            <%= image_tag "#{base_url}/base-pictures/#{b.name}", size: '96x60', id: "bimg-sel-#{b.id}", class: 'image-list' %>
           <% end %>
 
           <!-- Hide the check boxes and radio buttons, only need images to display -->
