--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -8,3 +8,9 @@
 <%= link_to('Save', new_mosaic_path, class: 'btn btn-primary') %>
 <%= link_to('Delete', mosaics_path, method: :delete, class: 'btn btn-danger') %>
 <%= link_to('Share', new_mosaic_path, class: 'btn btn-success') %>
+
+<%= javascript_tag do %>
+  window.composition_pictures = <%= raw @user.composition_pictures.to_json %>
+  window.base_pictures        = <%= raw @user.base_pictures.to_json %>
+  window.mosaics              = <%= raw @user.mosaics.to_json %>
+<% end %>
