--- a/app/views/mosaics/new.html.erb
+++ b/app/views/mosaics/new.html.erb
@@ -1,13 +1,14 @@
 <h2> Create a Mosaic! </h2>
 
 
-<div class='row'>
+<div id='navbar' class='row'>
   <div class='col-xs-12'>
-
-    <%= link_to 'Profile', user_path(id: current_user.id), class: 'btn btn-info btn-sm h-right' %>
-
+    <%= link_to 'Sign Out', user_path(id: current_user.id), method: :delete, class: 'btn btn-danger btn-sm right' %>
+    <!--<%= link_to 'Settings', user_path(id: current_user.id), class: 'btn btn-primary btn-sm right' %>-->
+    <%= link_to 'Profile', user_path(id: current_user.id), class: 'btn btn-info btn-sm right' %>
   </div>
 </div>
+
 <div class='row'>
   <div class='col-xs-12'>
 
