--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -1,7 +1,7 @@
 <h2> Show dis shit </h2>
 
 <!-- TODO: Figure out better sizing scheme. This will just distort -->
-<%= image_tag(@user.mosaics.last.name, size: picture_lg(@user.mosaics.last)) %>
+<%= image_tag("https://s3.amazonaws.com/afr-mosaic/#{@user.email}/mosaics/#{@user.mosaics.last.name}", size: picture_lg(@user.mosaics.last)) %>
 
 </br></br>
 
