Fix sign_out link and rename title of show page

--- a/app/views/mosaics/show.html.erb
+++ b/app/views/mosaics/show.html.erb
@@ -1,4 +1,4 @@
-<h2> Show dis shit </h2>
+<h2> Mosaic </h2>
 
 <!-- TODO: Figure out better sizing scheme. This will just distort -->
 <%= image_tag("https://s3.amazonaws.com/afr-mosaic/#{@user.email}/mosaics/#{@user.mosaics.last.name}", size: picture_lg(@user.mosaics.last)) %>
