--- a/app/views/modals/_delete.html.erb
+++ b/app/views/modals/_delete.html.erb
@@ -16,7 +16,7 @@
           <!-- Create lists of selectable images mapped to check boxes and radio buttons created below for composition and base pictures respectively. Tied together in Mosaics.js -->
           <h5> Composition Pictures </h5>
           <% @user.composition_pictures.each do |c| %>
-            <%= image_tag "#{base_url}/composition-pictures/#{c.name}", size: '96x60', id: "cimg-del-#{c.id}" %>
+            <%= image_tag "#{base_url}/composition-pictures/#{c.name}", size: '96x60', id: "cimg-del-#{c.id}", class: 'image-list'  %>
           <% end %>
 
           <h5> Base Pictures </h5>
@@ -34,7 +34,7 @@
             <!-- Create lists of check boxes and radio buttons representing composition and base pictures respectively. These are controlled by clicks on images. 
                - Check box/radio button IDs: user_[composition/base]_picture_ids_[id] -->
             <%= f.association :composition_pictures, collection: @user.composition_pictures, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
-            <%= f.association :base_pictures, collection: @user.base_pictures, include_hidden: false, include_blank: false, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
+            <%= f.association :base_pictures, collection: @user.base_pictures, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
             <%= f.association :mosaics, collection: @user.mosaics, class: 'image-checkbox', as: :check_boxes, :checked => [] %>
           </div>
 
