present user's pictures to profile page in form of javascript window variables

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,3 +42,9 @@
 <%= render 'modals/distribution' %>
 <!-- Change Password Modal -->
 <%= render 'modals/change_password' %>
+
+<%= javascript_tag do %>
+  window.composition_pictures = <%= raw @user.composition_pictures.to_json %>
+  window.base_pictures        = <%= raw @user.base_pictures.to_json %>
+  window.mosaics              = <%= raw @user.mosaics.to_json %>
+<% end %>
