--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 <div class='row'>
   <div class='col-xs-12'>
 
-    <%= link_to 'Back', new_mosaic_path, class: 'btn btn-danger' %>
+    <%= link_to 'Back', new_picture_path, class: 'btn btn-danger' %>
 
   </div>
 </div>
