--- a/app/views/users/new_login.html.erb
+++ b/app/views/users/new_login.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @user, url: url_for(controller: :users, action: :login_user), html: { class: 'form-signin' } do |f | %>
+<%= simple_form_for @user, url: url_for(controller: :users, action: :login), html: { class: 'form-signin' } do |f | %>
   <h2 class='form-signin-heading'>Please login</h2>
   <%= f.input_field :email, placeholder: 'Email Address', class: 'form-control' %>
   <%= f.input_field :password, placeholder: 'Password', class: 'form-control last-form-control' %>
