--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@
 #container {
   max-width: 600px;
   margin-top: 100px;
-  padding-bottom: 20px;
+  padding: 15px 20px 15px;
   text-align: center;
   background-color: #fff;
   border: 1px solid rgba(0,0,0,0.1);
@@ -80,5 +80,9 @@ body {
   .active {
     font-weight: bold;
   }
+}
+
+.mosaic {
+  list-style-type: none;
 }
 
