Refactor to adhere to class naming conventions and add some stylings

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,7 +82,12 @@ body {
   }
 }
 
-.mosaic {
-  list-style-type: none;
-}
+.dashboard {
+  .mosaic {
+    list-style-type: none;
+  }
 
+  ul {
+    padding-left: 0px;
+  }
+}
