--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* GENERAL LAYOUT STYLES */
+/***** GENERAL LAYOUT *****/
 #container {
   max-width: 600px;
   margin-top: 100px;
@@ -33,12 +33,11 @@ body {
 }
 
 
-/* Registration Form Styles */
+/***** REGISTRATION PAGE *****/
 .registration-form {
   max-width: 380px;
   padding: 15px 35px 45px;
   margin: 0 auto;
-
 
   .input-group {
     .form-control {
@@ -102,7 +101,7 @@ body {
     padding-left: 0px;
   }
 
-  /***** MOSAICS PAGE *****/
+  /***** SIDE NAV *****/
   .side-nav {
     .active a {
       background-color: gray !important;
