Add v1 of uploadPictures View and Templates * add basic hook into direct S3 uploads from Backbone instead of Rails * create HTML for upload page * Add initial styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -142,3 +142,20 @@ body {
   }
 }
 
+
+/***** UPLOAD PAGE *****/
+.upload-form {
+  max-width: 380px;
+  padding: 0px 35px 45px;
+  margin: 0 auto;
+
+  .upload-form-footer {
+
+    button {
+      margin-top: 4px;
+      width: 100%;
+      font-size: 18px;
+      font-weight: bold;
+    }
+  }
+}
