--- a/app/assets/stylesheets/mosaics/dashboard.css.scss
+++ b/app/assets/stylesheets/mosaics/dashboard.css.scss
@@ -71,11 +71,41 @@
 
 /***** UPLOAD PAGE *****/
 .upload-form {
-  max-width: 380px;
-  padding: 0px 35px 45px;
+  max-width: 90%;
   margin: 0 auto;
 
-  .fileinput-button {
-    margin-bottom: 2px;
+  .fileinput-header {
+    overflow: hidden;
+    border-bottom: 1px solid gray;
+    margin-bottom: 4px;
+
+    .fileinput-title {
+      float: left;
+
+      h4 {
+        margin-bottom: 0px;
+      }
+    }
+
+    .fileinput-button {
+      float: right;
+    }
+  }
+
+  .upload-picture-list {
+    padding-left: 0px;
+
+    .upload-picture-thumbnail {
+      display: inline;
+      
+      img {
+        width: 30%;
+        margin: 1px;
+
+        &:hover {
+          border: 1px solid rgba(68, 83, 142, 0.74);
+        }
+      }
+    }
   }
 }
