Update Registration: > Add bootstrap grid to page > improve naming of HTML elements > better adhere to DRY principle > continue standardization of dealing with nav > programmatically set active nav instead of hardcoded into HTML

--- a/app/assets/stylesheets/users/registration.css.scss
+++ b/app/assets/stylesheets/users/registration.css.scss
@@ -1,5 +1,5 @@
 /***** REGISTRATION PAGE *****/
-.registration-form {
+#registration-form {
   max-width: 380px;
   padding: 15px 35px 45px;
   margin: 0 auto;
@@ -34,7 +34,7 @@
   }
 }
 
-.registration-nav {
+#registration-nav {
   li {
     width: 50%;
 
