Update Profile: > Add ability to update email > Reformat profile page > General refactor to improve style, format and naming > Perform validation of new password and confirmation client side > Add error class when user input is incorrect

--- a/app/assets/stylesheets/mosaics/dashboard.css.scss
+++ b/app/assets/stylesheets/mosaics/dashboard.css.scss
@@ -56,10 +56,24 @@
       width: 60%;
     }
 
-    .save {
-      margin-top: 2px;
-      width: 60%;
-      font-weight: bold;
+    .profile-header {
+      overflow: hidden;
+      border-bottom: 1px solid gray;
+      margin-bottom: 4px;
+
+      .profile-title {
+        float: left;
+      }
+
+      .update {
+        float: right;
+        background: transparent;
+        font-weight: bold;
+      }
+    }
+
+    .textfield-error {
+      border: 1px solid red;
     }
   }
 }
