Rename pages and associated files from side-nav

--- a/app/assets/stylesheets/mosaics/content.css.scss
+++ b/app/assets/stylesheets/mosaics/content.css.scss
@@ -1,5 +1,5 @@
-/***** MANAGE CONTENT PAGE *****/
-#manage-content-nav {
+/***** CONTENT PAGE *****/
+#content-nav {
   li a { 
     color: black;
   }
