--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require jquery-ui
  *= require jquery.fileupload
  *= require jquery.fileupload-ui
  *= require_self
@@ -28,6 +29,7 @@
   background-color: #fff;
   border: 1px solid rgba(0,0,0,0.1);
 }
+
 body {
   background: #eee !important;  
 }
