Update picture_index show list view

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -21,10 +21,10 @@
     }
   }
 
-  .upload-picture-list {
+  .picture-list {
     padding-left: 0px;
 
-    .picture {
+    .picture-thumbnail {
       display: inline;
       
       img {
