Restyle content nav to match side nav

--- a/app/assets/stylesheets/navs.css.scss
+++ b/app/assets/stylesheets/navs.css.scss
@@ -24,7 +24,7 @@
 
 /***** CONTENT PAGE *****/
 #content-nav {
-  li a { 
-    color: black;
+  .active a {
+    background-color: gray !important;
   }
 }
