--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -89,3 +89,28 @@ body {
   border: 1px solid green;
   color: green;
 }
+
+/***** Page Headings *****/
+.page-title {
+  padding-bottom: 6px;
+  border-bottom: 1px solid gray;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  overflow: hidden;
+  width: 100%;
+
+  .title-text {
+    float: left;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .title-button {
+    float: right;
+    background: transparent;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-weight: bold;
+  }
+}
+}
