--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -75,4 +75,21 @@ body {
     font-weight: bold;
   }
 }
+
+/***** Picture Lists *****/
+.picture-list {
+  padding-left: 0px; 
+  list-style-type: none;
+
+  .picture {
+    display: inline;
+    
+    img {
+      margin: 1px;
+
+      &:hover {
+        border: 1px solid rgba(68, 83, 142, 0.74);
+      }
+    }
+  }
 }
