Rename content view to content_manager view

--- a/app/assets/stylesheets/content_manager.css.scss
+++ b/app/assets/stylesheets/content_manager.css.scss
@@ -1,9 +1,9 @@
-/***** CONTENT PAGE *****/
-#content {
+/***** CONTENT MANAGER PAGE *****/
+#content-manager {
   .upload-form {
     .upload-picture-list {
       .picture-list {
-        .picture-thumbnail {
+        .picture {
           img {
             width: 30%;
           }
