--- a/app/assets/stylesheets/edit-dialog.css.scss
+++ b/app/assets/stylesheets/edit-dialog.css.scss
@@ -22,7 +22,7 @@
         vertical-align: bottom;
       }
 
-      .btn-text {
+      .button-text {
         float: right;
         // TODO: Align center
         vertical-align: bottom;
