Refactor for design

--- a/app/assets/stylesheets/gallery.css.scss
+++ b/app/assets/stylesheets/gallery.css.scss
@@ -2,7 +2,7 @@
 #gallery {
   #gallery-picture-list {
     .picture-list {
-      .picture-thumbnail {
+      .picture {
         img {
           width: 45%;
         }
