--- a/app/assets/stylesheets/navs.css.scss
+++ b/app/assets/stylesheets/navs.css.scss
@@ -1,6 +1,10 @@
 .nav {
+  text-overflow: clip;
+
   .active {
     font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
 
     a {
       background-color: gray !important;
