--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,6 +52,10 @@ body {
   color: green;
 }
 
+.selected {
+  border: 2px ridge blue;
+}
+
 /***** Page Headings *****/
 .page-title {
   padding-bottom: 6px;
@@ -87,7 +91,7 @@ body {
     img {
       margin: 1px;
 
-      &:hover {
+      &:hover:not(.selected) {
         border: 1px solid rgba(68, 83, 142, 0.74);
       }
     }
