Add mosaic creation page up until creation request > Add template with instructions and picture list > Add styles for more reusable page-title formats > Mosaic Creation view is two-step process and makes use of the 'select' PicturesIndex list 	> First step select composition pictures 	> Next updates screen to allow for repeat for base pictures

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,34 @@ body {
     padding-top: 0px;
     padding-bottom: 0px;
     font-weight: bold;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.page-sub-title {
+  width: 100%;
+  float: right;
+  font-style: italic;
+
+  .title-text {
+    float: left;
+    font-size: 14px;
+    font-weight: italic;
+  }
+
+  .title-button {
+    float: right;
+    background: transparent;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-weight: bold;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
