--- a/app/assets/stylesheets/designer.css.scss
+++ b/app/assets/stylesheets/designer.css.scss
@@ -6,7 +6,7 @@
       font: 14px;
     }
 
-    #mosaics-create {
+    #pictures-mosaic {
       .picture-list {
         .picture {
           img {
