Add ability to select all pictures with one click

--- a/app/assets/stylesheets/designer.css.scss
+++ b/app/assets/stylesheets/designer.css.scss
@@ -7,6 +7,12 @@
     }
 
     #pictures-mosaic {
+      .select-all {
+        text-decoration: none;
+        font-style: italic;
+        text-align: right;
+      }
+
       .picture-list {
         .picture {
           img {
